--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="theme-color" content="#2563eb" />
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="style.css" />
+  <link rel"=apple-touch-icon" href="icons/icon-180"
   <title>Linear Interpolator</title>
 </head>
 
