--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="theme-color" content="#2563eb" />
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="style.css" />
-  <link rel"=apple-touch-icon" href="icons/icon-180"
+  <link rel="apple-touch-icon" href="icons/icon-180"/>
   <title>Linear Interpolator</title>
+  <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 
 <body>
